src/generation/HaveFunAndArnoldCParser.java
// Generated from /Users/alessio/Code/HaveFunProject/src/HaveFunAndArnoldC.g4 by ANTLR 4.12.0
package generation;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class HaveFunAndArnoldCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ARNOLDSTARTMAIN=1, ARNOLDENDMAIN=2, ARNOLDAT=3, ARNOLDBOOL=4, ARNOLDTRUE=5, 
		ARNOLDFALSE=6, ARNOLDPLUSOPERATOR=7, ARNOLDMINUSOPERATOR=8, ARNOLDMULTIPLICATIONOPERATOR=9, 
		ARNOLDDIVISIONOPERATOR=10, ARNOLDEQUALTO=11, ARNOLDGREATERTHAN=12, ARNOLDOR=13, 
		ARNOLDAND=14, ARNOLDPRINT=15, ARNOLDDECLARE=16, ARNOLDSETINITIALVALUE=17, 
		ARNOLDASSIGNVARIABLE=18, ARNOLDSETVALUE=19, ARNOLDENDASSIGNVARIABLE=20, 
		ARNOLDIF=21, ARNOLDELSE=22, ARNOLDENDIF=23, ARNOLDWHILE=24, ARNOLDENDWHILE=25, 
		NAT=26, BOOL=27, PLUS=28, MINUS=29, MUL=30, DIV=31, MOD=32, POW=33, AND=34, 
		OR=35, EQQ=36, NEQ=37, LEQ=38, GEQ=39, LT=40, GT=41, NOT=42, IF=43, THEN=44, 
		ELSE=45, WHILE=46, SKIPP=47, ASSIGN=48, OUT=49, FUN=50, RETURN=51, GLOBAL=52, 
		LPAR=53, RPAR=54, LBRACE=55, RBRACE=56, COMMA=57, SEMICOLON=58, DOTG=59, 
		ND=60, DOLLAR=61, ID=62, WS=63, STRING=64, ARNOLDFLOAT=65;
	public static final int
		RULE_program = 0, RULE_arnoldIni = 1, RULE_globalEnv = 2, RULE_arnoldCom = 3, 
		RULE_arnoldOperations = 4, RULE_operand = 5, RULE_fun = 6, RULE_com = 7, 
		RULE_exp = 8;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "arnoldIni", "globalEnv", "arnoldCom", "arnoldOperations", 
			"operand", "fun", "com", "exp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'IT'S SHOWTIME'", "'YOU HAVE BEEN TERMINATED'", "'@'", null, "'NO PROBLEMO'", 
			"'I LIED'", "'GET UP'", "'GET DOWN'", "'YOU'RE FIRED'", "'HE HAD TO SPLIT'", 
			"'YOU ARE NOT YOU YOU ARE ME'", "'LET OFF SOME STEAM BENNET'", "'CONSIDER THAT A DIVORCE'", 
			"'KNOCK KNOCK'", "'TALK TO THE HAND'", "'HEY CHRISTMAS TREE'", "'YOU SET US UP'", 
			"'GET TO THE CHOPPER'", "'HERE IS MY INVITATION'", "'ENOUGH TALK'", "'BECAUSE I'M GOING TO SAY PLEASE'", 
			"'BULLSHIT'", "'YOU HAVE NO RESPECT FOR LOGIC'", "'STICK AROUND'", "'CHILL'", 
			null, null, "'+'", "'-'", "'*'", "'/'", "'mod'", "'^'", "'&'", "'|'", 
			"'=='", "'!='", "'<='", "'>='", "'<'", "'>'", "'!'", "'if'", "'then'", 
			"'else'", "'while'", "'skip'", "'='", "'out'", "'fun'", "'return'", "'global'", 
			"'('", "')'", "'{'", "'}'", "','", "';'", "'.g'", "'nd'", "'$'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ARNOLDSTARTMAIN", "ARNOLDENDMAIN", "ARNOLDAT", "ARNOLDBOOL", "ARNOLDTRUE", 
			"ARNOLDFALSE", "ARNOLDPLUSOPERATOR", "ARNOLDMINUSOPERATOR", "ARNOLDMULTIPLICATIONOPERATOR", 
			"ARNOLDDIVISIONOPERATOR", "ARNOLDEQUALTO", "ARNOLDGREATERTHAN", "ARNOLDOR", 
			"ARNOLDAND", "ARNOLDPRINT", "ARNOLDDECLARE", "ARNOLDSETINITIALVALUE", 
			"ARNOLDASSIGNVARIABLE", "ARNOLDSETVALUE", "ARNOLDENDASSIGNVARIABLE", 
			"ARNOLDIF", "ARNOLDELSE", "ARNOLDENDIF", "ARNOLDWHILE", "ARNOLDENDWHILE", 
			"NAT", "BOOL", "PLUS", "MINUS", "MUL", "DIV", "MOD", "POW", "AND", "OR", 
			"EQQ", "NEQ", "LEQ", "GEQ", "LT", "GT", "NOT", "IF", "THEN", "ELSE", 
			"WHILE", "SKIPP", "ASSIGN", "OUT", "FUN", "RETURN", "GLOBAL", "LPAR", 
			"RPAR", "LBRACE", "RBRACE", "COMMA", "SEMICOLON", "DOTG", "ND", "DOLLAR", 
			"ID", "WS", "STRING", "ARNOLDFLOAT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HaveFunAndArnoldC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HaveFunAndArnoldCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ComContext com() {
			return getRuleContext(ComContext.class,0);
		}
		public TerminalNode EOF() { return getToken(HaveFunAndArnoldCParser.EOF, 0); }
		public List<FunContext> fun() {
			return getRuleContexts(FunContext.class);
		}
		public FunContext fun(int i) {
			return getRuleContext(FunContext.class,i);
		}
		public List<GlobalEnvContext> globalEnv() {
			return getRuleContexts(GlobalEnvContext.class);
		}
		public GlobalEnvContext globalEnv(int i) {
			return getRuleContext(GlobalEnvContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HaveFunAndArnoldCListener ) ((HaveFunAndArnoldCListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HaveFunAndArnoldCListener ) ((HaveFunAndArnoldCListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HaveFunAndArnoldCVisitor ) return ((HaveFunAndArnoldCVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(21);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUN) {
				{
				{
				setState(18);
				fun();
				}
				}
				setState(23);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(27);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==GLOBAL) {
				{
				{
				setState(24);
				globalEnv();
				}
				}
				setState(29);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(30);
			com(0);
			setState(31);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArnoldIniContext extends ParserRuleContext {
		public TerminalNode ARNOLDSTARTMAIN() { return getToken(HaveFunAndArnoldCParser.ARNOLDSTARTMAIN, 0); }
		public TerminalNode ARNOLDENDMAIN() { return getToken(HaveFunAndArnoldCParser.ARNOLDENDMAIN, 0); }
		public List<ArnoldComContext> arnoldCom() {
			return getRuleContexts(ArnoldComContext.class);
		}
		public ArnoldComContext arnoldCom(int i) {
			return getRuleContext(ArnoldComContext.class,i);
		}
		public ArnoldIniContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arnoldIni; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HaveFunAndArnoldCListener ) ((HaveFunAndArnoldCListener)listener).enterArnoldIni(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HaveFunAndArnoldCListener ) ((HaveFunAndArnoldCListener)listener).exitArnoldIni(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HaveFunAndArnoldCVisitor ) return ((HaveFunAndArnoldCVisitor<? extends T>)visitor).visitArnoldIni(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArnoldIniContext arnoldIni() throws RecognitionException {
		ArnoldIniContext _localctx = new ArnoldIniContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_arnoldIni);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			match(ARNOLDSTARTMAIN);
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 19234816L) != 0)) {
				{
				{
				setState(34);
				arnoldCom();
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(40);
			match(ARNOLDENDMAIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalEnvContext extends ParserRuleContext {
		public GlobalEnvContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalEnv; }
	 
		public GlobalEnvContext() { }
		public void copyFrom(GlobalEnvContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GlobalAssignValueContext extends GlobalEnvContext {
		public TerminalNode GLOBAL() { return getToken(HaveFunAndArnoldCParser.GLOBAL, 0); }
		public TerminalNode ID() { return getToken(HaveFunAndArnoldCParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(HaveFunAndArnoldCParser.ASSIGN, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(HaveFunAndArnoldCParser.SEMICOLON, 0); }
		public GlobalAssignValueContext(GlobalEnvContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HaveFunAndArnoldCListener ) ((HaveFunAndArnoldCListener)listener).enterGlobalAssignValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HaveFunAndArnoldCListener ) ((HaveFunAndArnoldCListener)listener).exitGlobalAssignValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HaveFunAndArnoldCVisitor ) return ((HaveFunAndArnoldCVisitor<? extends T>)visitor).visitGlobalAssignValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalEnvContext globalEnv() throws RecognitionException {
		GlobalEnvContext _localctx = new GlobalEnvContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_globalEnv);
		try {
			_localctx = new GlobalAssignValueContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(GLOBAL);
			setState(43);
			match(ID);
			setState(44);
			match(ASSIGN);
			setState(45);
			exp(0);
			setState(46);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArnoldComContext extends ParserRuleContext {
		public ArnoldComContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arnoldCom; }
	 
		public ArnoldComContext() { }
		public void copyFrom(ArnoldComContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArnoldWhileCycleContext extends ArnoldComContext {
		public TerminalNode ARNOLDWHILE() { return getToken(HaveFunAndArnoldCParser.ARNOLDWHILE, 0); }
		public OperandContext operand() {
			return getRuleContext(OperandContext.class,0);
		}
		public TerminalNode ARNOLDENDWHILE() { return getToken(HaveFunAndArnoldCParser.ARNOLDENDWHILE, 0); }
		public List<ArnoldComContext> arnoldCom() {
			return getRuleContexts(ArnoldComContext.class);
		}
		public ArnoldComContext arnoldCom(int i) {
			return getRuleContext(ArnoldComContext.class,i);
		}
		public ArnoldWhileCycleContext(ArnoldComContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HaveFunAndArnoldCListener ) ((HaveFunAndArnoldCListener)listener).enterArnoldWhileCycle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HaveFunAndArnoldCListener ) ((HaveFunAndArnoldCListener)listener).exitArnoldWhileCycle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HaveFunAndArnoldCVisitor ) return ((HaveFunAndArnoldCVisitor<? extends T>)visitor).visitArnoldWhileCycle(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArnoldAssignValueContext extends ArnoldComContext {
		public TerminalNode ARNOLDASSIGNVARIABLE() { return getToken(HaveFunAndArnoldCParser.ARNOLDASSIGNVARIABLE, 0); }
		public TerminalNode ID() { return getToken(HaveFunAndArnoldCParser.ID, 0); }
		public TerminalNode ARNOLDSETVALUE() { return getToken(HaveFunAndArnoldCParser.ARNOLDSETVALUE, 0); }
		public OperandContext operand() {
			return getRuleContext(OperandContext.class,0);
		}
		public TerminalNode ARNOLDENDASSIGNVARIABLE() { return getToken(HaveFunAndArnoldCParser.ARNOLDENDASSIGNVARIABLE, 0); }
		public List<ArnoldOperationsContext> arnoldOperations() {
			return getRuleContexts(ArnoldOperationsContext.class);
		}
		public ArnoldOperationsContext arnoldOperations(int i) {
			return getRuleContext(ArnoldOperationsContext.class,i);
		}
		public ArnoldAssignValueContext(ArnoldComContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HaveFunAndArnoldCListener ) ((HaveFunAndArnoldCListener)listener).enterArnoldAssignValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HaveFunAndArnoldCListener ) ((HaveFunAndArnoldCListener)listener).exitArnoldAssignValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HaveFunAndArnoldCVisitor ) return ((HaveFunAndArnoldCVisitor<? extends T>)visitor).visitArnoldAssignValue(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArnoldPrintExpressionContext extends ArnoldComContext {
		public TerminalNode ARNOLDPRINT() { return getToken(HaveFunAndArnoldCParser.ARNOLDPRINT, 0); }
		public TerminalNode STRING() { return getToken(HaveFunAndArnoldCParser.STRING, 0); }
		public TerminalNode ID() { return getToken(HaveFunAndArnoldCParser.ID, 0); }
		public ArnoldPrintExpressionContext(ArnoldComContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HaveFunAndArnoldCListener ) ((HaveFunAndArnoldCListener)listener).enterArnoldPrintExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HaveFunAndArnoldCListener ) ((HaveFunAndArnoldCListener)listener).exitArnoldPrintExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HaveFunAndArnoldCVisitor ) return ((HaveFunAndArnoldCVisitor<? extends T>)visitor).visitArnoldPrintExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArnoldIfElseCheckContext extends ArnoldComContext {
		public TerminalNode ARNOLDIF() { return getToken(HaveFunAndArnoldCParser.ARNOLDIF, 0); }
		public OperandContext operand() {
			return getRuleContext(OperandContext.class,0);
		}
		public List<ArnoldComContext> arnoldCom() {
			return getRuleContexts(ArnoldComContext.class);
		}
		public ArnoldComContext arnoldCom(int i) {
			return getRuleContext(ArnoldComContext.class,i);
		}
		public TerminalNode ARNOLDELSE() { return getToken(HaveFunAndArnoldCParser.ARNOLDELSE, 0); }
		public TerminalNode ARNOLDENDIF() { return getToken(HaveFunAndArnoldCParser.ARNOLDENDIF, 0); }
		public ArnoldIfElseCheckContext(ArnoldComContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HaveFunAndArnoldCListener ) ((HaveFunAndArnoldCListener)listener).enterArnoldIfElseCheck(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HaveFunAndArnoldCListener ) ((HaveFunAndArnoldCListener)listener).exitArnoldIfElseCheck(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HaveFunAndArnoldCVisitor ) return ((HaveFunAndArnoldCVisitor<? extends T>)visitor).visitArnoldIfElseCheck(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArnoldIfCheckContext extends ArnoldComContext {
		public TerminalNode ARNOLDIF() { return getToken(HaveFunAndArnoldCParser.ARNOLDIF, 0); }
		public OperandContext operand() {
			return getRuleContext(OperandContext.class,0);
		}
		public ArnoldComContext arnoldCom() {
			return getRuleContext(ArnoldComContext.class,0);
		}
		public TerminalNode ARNOLDENDIF() { return getToken(HaveFunAndArnoldCParser.ARNOLDENDIF, 0); }
		public ArnoldIfCheckContext(ArnoldComContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HaveFunAndArnoldCListener ) ((HaveFunAndArnoldCListener)listener).enterArnoldIfCheck(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HaveFunAndArnoldCListener ) ((HaveFunAndArnoldCListener)listener).exitArnoldIfCheck(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HaveFunAndArnoldCVisitor ) return ((HaveFunAndArnoldCVisitor<? extends T>)visitor).visitArnoldIfCheck(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArnoldDeclareVariableContext extends ArnoldComContext {
		public TerminalNode ARNOLDDECLARE() { return getToken(HaveFunAndArnoldCParser.ARNOLDDECLARE, 0); }
		public TerminalNode ID() { return getToken(HaveFunAndArnoldCParser.ID, 0); }
		public TerminalNode ARNOLDSETINITIALVALUE() { return getToken(HaveFunAndArnoldCParser.ARNOLDSETINITIALVALUE, 0); }
		public OperandContext operand() {
			return getRuleContext(OperandContext.class,0);
		}
		public ArnoldDeclareVariableContext(ArnoldComContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HaveFunAndArnoldCListener ) ((HaveFunAndArnoldCListener)listener).enterArnoldDeclareVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HaveFunAndArnoldCListener ) ((HaveFunAndArnoldCListener)listener).exitArnoldDeclareVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HaveFunAndArnoldCVisitor ) return ((HaveFunAndArnoldCVisitor<? extends T>)visitor).visitArnoldDeclareVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArnoldComContext arnoldCom() throws RecognitionException {
		ArnoldComContext _localctx = new ArnoldComContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_arnoldCom);
		int _la;
		try {
			setState(86);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new ArnoldIfElseCheckContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				match(ARNOLDIF);
				setState(49);
				operand();
				setState(50);
				arnoldCom();
				setState(51);
				match(ARNOLDELSE);
				setState(52);
				arnoldCom();
				setState(53);
				match(ARNOLDENDIF);
				}
				break;
			case 2:
				_localctx = new ArnoldIfCheckContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				match(ARNOLDIF);
				setState(56);
				operand();
				setState(57);
				arnoldCom();
				setState(58);
				match(ARNOLDENDIF);
				}
				break;
			case 3:
				_localctx = new ArnoldWhileCycleContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(60);
				match(ARNOLDWHILE);
				setState(61);
				operand();
				setState(63); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(62);
					arnoldCom();
					}
					}
					setState(65); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 19234816L) != 0) );
				setState(67);
				match(ARNOLDENDWHILE);
				}
				break;
			case 4:
				_localctx = new ArnoldPrintExpressionContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(69);
				match(ARNOLDPRINT);
				setState(70);
				_la = _input.LA(1);
				if ( !(_la==ID || _la==STRING) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case 5:
				_localctx = new ArnoldAssignValueContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(71);
				match(ARNOLDASSIGNVARIABLE);
				setState(72);
				match(ID);
				setState(73);
				match(ARNOLDSETVALUE);
				setState(74);
				operand();
				setState(76); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(75);
					arnoldOperations();
					}
					}
					setState(78); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 32640L) != 0) );
				setState(80);
				match(ARNOLDENDASSIGNVARIABLE);
				}
				break;
			case 6:
				_localctx = new ArnoldDeclareVariableContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(82);
				match(ARNOLDDECLARE);
				setState(83);
				match(ID);
				setState(84);
				match(ARNOLDSETINITIALVALUE);
				setState(85);
				operand();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
